# Marlborge

./: CMakeLists.txt  README.md
client/src/: CMakeLists.txt  dllmain.cpp  main.cpp
client/src/private/: HTTPClient.cpp
client/src/private/Methods/: HTTP.cpp
client/src/public/: HTTPClient.h  Referers.h  UserAgents.h
client/src/public/Methods/: HTTP.h
server/: CMakeLists.txt
server/src/: CMakeLists.txt  Colors.h  Util.h  main.cpp
tests/: attack.py  protocol.py
